# univr

./: .gitignore  README.md
2016-2017/computer-architecture/Elaborato-ASM/: controller.c
2016-2017/computer-architecture/Elaborato-SIS/: FSMD.blif
2016-2017/computer-architecture/Elaborato-SIS/non_ottimizzati/: CONTROLLO.blif  ELABORAZIONE.blif  MUX188.blif  UNO1.blif  ZERO1.blif
2017-2018/computer-architecture/Elaborato-ASM/: makefile
2017-2018/computer-architecture/Elaborato-SIS/non_ottimizzati/: SOMMATORE8.blif
2017-2018/network-security/Java-Socket/tcp-echo-client-server/: Client.java
2017-2018/operating-system/bash/Elaborato/: checkSpace.bash  recorder.bash
2017-2018/operating-system/bash/Sample/: es1.bash  es2.bash
2017-2018/operating-system/ipc/: ipc_clear.sh
2017-2018/operating-system/ipc/include/: defines.h  figlio.h  logger.h
2017-2018/software-engineering/StoreManager/nbproject/: project.properties
2018-2019/basi-di-dati/: sql-basi-di-dati.aux  sql-basi-di-dati.fdb_latexmk  sql-basi-di-dati.fls  sql-basi-di-dati.tex  sql-basi-di-dati.toc
2018-2019/basi-di-dati-lab/e1/: es-1.sql  readme.md
2018-2019/basi-di-dati-lab/e2/: readme.md
2018-2019/basi-di-dati-lab/e3/: es-3.sql  readme.md
2018-2019/basi-di-dati-lab/e4/: e4-2.sql  e4-3.sql  readme.md
2018-2019/linguaggi/appunti/: appunti_linguaggi.aux  appunti_linguaggi.fls  appunti_linguaggi.tex
2018-2019/linguaggi/es-lab/intexp/: pom.xml
Bachelor/2017-2018/operating-system/ipc/: Makefile
Bachelor/2017-2018/software-engineering/StoreManager/: build.xml
Bachelor/2018-2019/basi-di-dati-lab/e2/: readme.md
Bachelor/2018-2019/basi-di-dati-lab/e4/: e4-4.sql
Bachelor/2018-2019/elaborazione-segnali-immagini/: LoadFile.m  SalvaFile.m  UnioneSegnali.m  main.m
Bachelor/2018-2019/linguaggi/appunti/: appunti_linguaggi.fdb_latexmk
Master/Advanced Architectures/es-cuda/1DStencil/: CMakeLists.txt  compile.sh  execution.md
Master/Advanced Architectures/es-cuda/MatrixMultiplication/: MatrixMultiplication.cu
Master/Advanced Architectures/es-cuda/MatrixTranspose/: MatrixTranspose.cu  MatrixTransposeLow.cu
Master/Advanced Architectures/es-openmp/Factorial/: Factorial.cpp  compile.sh  factorial
Master/Advanced Architectures/es-openmp/Fibonacci/: Fibonacci.cpp  fibonacci
Master/Advanced Architectures/es-openmp/Find/: CMakeLists.txt  Find.cpp  compile.sh
Master/Advanced Architectures/es-openmp/MatrixMul/: CMakeLists.txt  compile.sh  matrix_mul_O3
Master/Advanced Architectures/es-openmp/MatrixMul/src/: MatrixMultiplication.cpp
Master/Advanced Architectures/es-openmp/ProducerConsumer/: producerconsumer
Master/Advanced Architectures/es-openmp/QuickSort/: quicksort
Master/PSE/assignment1/Report/: VR445566_Fabio_Chiarani.tex  biblio.bib
Master/advanced-architecture/es-cuda/: readme.md
Master/advanced-architecture/es-openmp/Factorial/: CMakeLists.txt
Master/advanced-architecture/es-openmp/QuickSort/: CMakeLists.txt  QuickSort.cpp  compile.sh
Master/advanced-architecture/es-openmp/QuickSort/include/: Timer.i.hpp
Master/bigdata/: icelab-restapi-k8s.tex  readme.md
computer-architecture/Elaborato-ASM/: controller_ASM.s
computer-architecture/Elaborato-SIS/: Codifica pH.xlsx
computer-architecture/Elaborato-SIS/non_ottimizzati/: CENTOQUARANTA8.blif  CINQUANTANOVE6.blif  CONTROLLOJEDI.blif  FSMD.blif  MAGGIORE8.blif  MUX122.blif  OTTANTA7.blif  REGISTRO8.blif  SOMMATORE1.blif  TRE2.blif  XNOR.blif  XOR.blif
network-security/CISCO/: es1.nsw
network-security/Java-Socket/UDP/: UdpEchoClientUppercase.java
network-security/Java-Socket/tcp-ftp-client-server/: Client.java
network-security/Java-Socket/tcp-somma-client-server/: Client.java
network-security/Java-Socket/udp-echo-client-server/: UdpEchoServerUppercase.java
network-security/docs/: Domande&Risposte.docx  README.md  ~$mande&Risposte.docx
network-security/docs/Domande&Risposte/: Backup di Domande&Risposte.docx
operating-system/bash/Elaborato/: query.bash
operating-system/ipc/: Makefile  README.md  doxygen.cfg  vr408541_syscall.tar
operating-system/ipc/doc/: file_input.txt  file_output.txt
operating-system/ipc/include/: defines.h  figlio.h  logger.h  nipote.h  padre.h  types.h  utils.h
operating-system/ipc/src/: figlio.c  logger.c  nipote.c  padre.c  utils.c
software-engineering/: README.md
software-engineering/StoreManager/db/: fill.sql  fullscript.sql  storedprocedure.sql  table.sql
software-engineering/StoreManager/nbproject/: genfiles.properties  project.xml
(+297 files in other folders)
